fix(portfolio): fix performance chart failing to load due to datetime mismatch
The chart broke because PortfolioSnapshot used LocalDate, which Jackson
serialises as a plain date string, while the frontend needed full
OffsetDateTime values for intra-day 1D range display. Switching the
field to OffsetDateTime exposed a secondary issue: z.iso.datetime() in
Zod v4 only accepts the Z suffix, but Jackson emits +00:00 offsets —
the same problem already worked around in the transactions endpoint.

The portfolio query cache errors were also triggering a duplicate toast
alongside the page-level ErrorBoundary message; both queries are now
marked silent so only the boundary message is shown.